# collectors_pocket

./: Cargo.toml  index.html  package-lock.json  package.json  postcss.config.ts  tailwind.config.ts  tsconfig.json
amplify/: tsconfig.json
amplify/auth/post-confirmation/: resource.ts
amplify/data/: resource.ts
backend/: Cargo.toml  README.md
backend/settings/: production.yaml
backend/src/: main.rs  settings.rs  startup.rs
files/: index.html
src/: App.tsx  index.css  main.rs  main.tsx
src/components/custom/: theme_toggle.tsx
src/pages/: home.tsx
src/pages/auth-locked/: profile.tsx
